--- a/api/package.json
+++ b/api/package.json
@@ -4,14 +4,24 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start":"nodemon src/index.js"
+    "start": "node src/server.js",
+    "test": "NODE_ENV=test jest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "factory-girl": "^5.0.4",
+    "faker": "^5.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.5",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "supertest": "^6.0.1"
+  },
+  "devDependencies": {
+    "@shelf/jest-mongodb": "^1.2.3",
+    "jest": "^26.6.3"
   }
 }
